# nijie-scraper

./: .gitignore  LICENSE  Nijie.cabal  nijie-scraper.cabal  stack.yaml
Web/: Nijie.hs
Web/Nijie/: JSON.hs  Login.hs  Parser.hs  Types.hs
src/Web/: Nijie.hs
src/Web/Nijie/: .#JSON.hs  JSON.hs  Login.hs  Parser.hs  Types.hs
test/: Spec.hs
